--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -3,9 +3,9 @@ extends ./index.pug
 block content
     .container 
         .row
-            .col-lg-12.mx-auto
+            .col-lg-12
                 //- h2 Alarm Viewer
-                div#cascade.form-group
+                div#cascade.form-group.row
                     .col-lg-4
                         label.form-label(for='step1') Category
                         select#step1.form-control(name="category") 
