proper table handling in viewer

--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -27,110 +27,130 @@ block extra_scripts
     script.
         const queryString = window.location.search;
         console.log('query string:',queryString);
-        //- const urlParams = new URLSearchParams(queryString);
-        //- const product = urlParams.get('product')
-        //- console.log(product);
-        
-        $('#cascade').cascadingDropdown({
-            selectBoxes: [
-                {
-                    selector: '#step1',
-                    source: function(request, response) {
-                        $.getJSON('/alarm/categories', request, function(data) {
-                            var first=true;
-                            var uniqueCategories=[];
-                            var seen=[];
-                            $.each(data, function(index,item){
-                                if (seen.includes(item.category)){
-                                    return true;
-                                }
-                                uniqueCategories.push({
-                                    label: item.category,
-                                    value: item.category,
-                                    selected: first
+        var qCategory, qSubcategory, qEvent;
+        var table;
+        if (queryString.length>0){
+            try{
+                const urlParams = new URLSearchParams(queryString);
+                qCategory = urlParams.get('category');
+                qSubcategory = urlParams.get('subcategory');
+                qEvent = urlParams.get('event');
+                console.log(qCategory, qSubcategory, qEvent);
+            }catch(error){
+                console.error('bad query string.');
+            }
+        }
+
+        function updateForm(cat, subcat, event){
+            var src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#"
+            src+="/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
+            src+="&_a=(query%3A(language%3Akuery%2Cquery%3A%27"
+            src+="category%3A%22"+cat+"%22"
+            src+="%20AND%20subcategory%3A%22"+subcat+"%22"
+            src+="%20AND%20event%3A%22"+event+"%22"
+            src+="%27))"
+            console.log("src:"+src);
+            $('#alarmsInTime').attr('src', src);
+        }
+
+        function createCascade(){
+            $('#cascade').cascadingDropdown({
+                selectBoxes: [
+                    {
+                        selector: '#step1',
+                        source: function(request, response) {
+                            $.getJSON('/alarm/categories', request, function(data) {
+                                var first=true;
+                                var uniqueCategories=[];
+                                var seen=[];
+                                $.each(data, function(index,item){
+                                    if (seen.includes(item.category)){
+                                        return true;
+                                    }
+                                    uniqueCategories.push({
+                                        label: item.category,
+                                        value: item.category,
+                                        selected: first
+                                    });
+                                    seen.push(item.category);
+                                    first=false;
                                 });
-                                seen.push(item.category);
-                                first=false;
+                                response(uniqueCategories);
                             });
-                            response(uniqueCategories);
-                        });
-                    }
-                },
-                {
-                    selector: '#step2',
-                    requires: ['#step1'],
-                    source: function(request, response) {
-                        $.getJSON('/alarm/categories', request, function(data) {
-                            var first=true;
-                            var uniqueSubCategories=[];
-                            var seen=[];
-                            $.each(data, function(index,item){
-                                if(item.category!==$('#step1').val()){
-                                    return true;
-                                }
-                                if (seen.includes(item.subcategory)){
-                                    return true;
-                                }
-                                uniqueSubCategories.push({
-                                    label: item.subcategory,
-                                    value: item.subcategory,
-                                    selected: first
-                                });
-                                seen.push(item.subcategory);
-                                first=false;
-                            });
-                            response(uniqueSubCategories);
-                        });
-                    }
-                },
-                {
-                    selector: '#step3',
-                    requires: ['#step1', '#step2'],
-                    requireAll: true,
-                    source: function(request, response) {
-                        $.getJSON('/alarm/categories', request, function(data) {
-                            var first=true;
-                            var uniqueEvents=[];
-                            $.each(data, function(index,item){
-                                if(item.category!==$('#step1').val()){
-                                    return true;
-                                }
-                                if(item.subcategory!==$('#step2').val()){
-                                    return true;
-                                }
-                                uniqueEvents.push({
-                                    label: item.event,
-                                    value: item.event,
-                                    selected: first
-                                });
-                                first=false;
-                            });
-                            response(uniqueEvents);
-                        });
+                        }
                     },
-                    onChange: function(event, value, requiredValues, requirementsMet){
-                        if (requirementsMet){
-                            const cat=requiredValues.category; 
-                            const subcat=requiredValues.subcategory; 
-                            const eve=value;
-                            console.log(cat, subcat, eve);
-                            src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#"
-                            src+="/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
-                            src+="&_a=(query%3A(language%3Akuery%2Cquery%3A%27"
-                            src+="category%3A%22"+cat+"%22"
-                            src+="%20AND%20subcategory%3A%22"+subcat+"%22"
-                            src+="%20AND%20event%3A%22"+eve+"%22"
-                            src+="%27))"
-                            console.log("src:"+src);
-                            $('#alarmsInTime').attr('src', src);
+                    {
+                        selector: '#step2',
+                        requires: ['#step1'],
+                        source: function(request, response) {
+                            $.getJSON('/alarm/categories', request, function(data) {
+                                var first=true;
+                                var uniqueSubCategories=[];
+                                var seen=[];
+                                $.each(data, function(index,item){
+                                    if(item.category!==$('#step1').val()){
+                                        return true;
+                                    }
+                                    if (seen.includes(item.subcategory)){
+                                        return true;
+                                    }
+                                    uniqueSubCategories.push({
+                                        label: item.subcategory,
+                                        value: item.subcategory,
+                                        selected: first
+                                    });
+                                    seen.push(item.subcategory);
+                                    first=false;
+                                });
+                                response(uniqueSubCategories);
+                            });
+                        }
+                    },
+                    {
+                        selector: '#step3',
+                        requires: ['#step1', '#step2'],
+                        requireAll: true,
+                        source: function(request, response) {
+                            $.getJSON('/alarm/categories', request, function(data) {
+                                var first=true;
+                                var uniqueEvents=[];
+                                $.each(data, function(index,item){
+                                    if(item.category!==$('#step1').val()){
+                                        return true;
+                                    }
+                                    if(item.subcategory!==$('#step2').val()){
+                                        return true;
+                                    }
+                                    uniqueEvents.push({
+                                        label: item.event,
+                                        value: item.event,
+                                        selected: first
+                                    });
+                                    first=false;
+                                });
+                                response(uniqueEvents);
+                            });
+                        },
+                        onChange: function(event, value, requiredValues, requirementsMet){
+                            if (requirementsMet){
+                                qCategory = requiredValues.category; 
+                                qSubcategory =requiredValues.subcategory; 
+                                qEvent = value;
+                                updateForm(qCategory, qSubcategory, qEvent);
+                                if (table===undefined){   
+                                    createTable();
+                                } else {
+                                    table.ajax.reload();
+                                };
+                            }
                         }
                     }
-                }
-            ]
-        });
+                ]
+            });
+        }
 
-        ( function () {
-            var table = $('#alarms_table').DataTable({
+        function createTable() {
+            table = $('#alarms_table').DataTable({
                 paging: true,
                 searching: true,
                 ajax:{
@@ -138,10 +158,11 @@ block extra_scripts
                     url: '/alarm/fetch',
                     contentType: 'application/json',
                     data: function ( d ) {
+                        console.log('getting data for the table.');
                         return JSON.stringify({
-                            category:"WFMS", 
-                            subcategory:"User", 
-                            event:"Too much walltime consumed", 
+                            category: qCategory, 
+                            subcategory: qSubcategory, 
+                            event: qEvent, 
                             period: 24
                         });
                     },
@@ -151,10 +172,25 @@ block extra_scripts
                     }
                 },
                 columns: [
-                    {title:'Created', data: 'created_at'},
+                    {title:'Created', data: 'created_at', 
+                        render: function (data, type, row){
+                            var d=new Date(data);
+                            return d.toISOString().substr(0,19).replace('T',' ');
+                        }
+                    },
                     {title:'Body', data: 'body'},
                     {title:'Tags', data: 'tags'},
-                    {title:'Source', data: 'source'},
+                    //- ,render: function (data, type, row){
+                        //- return data.replace(',',' ');
+                    //- }},
+                    {title:'Source', data: 'source', 
+                        render: function (data, type, row){
+                            if (data === undefined){ return 'empty'}
+                            sourc = JSON.stringify(data);
+                            sour=sourc.substr(1,sourc.length-2).replaceAll(',',' ');
+                            return sour;
+                        }
+                    },
                     {title:"Annotation", data: 'annotation',
                         render: function (data, type, row) {
                                 //- console.log('data:',data,'row:',row );
@@ -173,4 +209,13 @@ block extra_scripts
                 //-   })
                 //- },
             });
-        }());
+        };
+        
+        if (qCategory===undefined){ 
+            createCascade();
+        }
+        else {
+            updateForm(qCategory,qSubcategory,qEvent);
+            createTable();
+        }
+
