--- a/views/profile.pug
+++ b/views/profile.pug
@@ -17,16 +17,16 @@ block content
             .col-lg-6.mx-auto
                 h1 Preferences
                 ul(id='prefdiv').list-group.list-group-flush 
-                    li.list-group-item Vacation &nbsp; 
-                        input( id='vacation' type='checkbox' width='20px' checked=preferences.vacation )
-                    li.list-group-item Time Interval to Receive Alerts &nbsp;
-                        select(id='interval' width='4px')
-                            option(value='1') 1 Hour Intervals
-                            option(value='2') 2 Hour Intervals
-                            option(value='4') 4 Hour Intervals
-                            option(value='8') 8 Hour Intervals
-                            option(value='12') 12 Hour Intervals
-                            option(value='24') 24 Hour Intervals
+                    //- li.list-group-item Vacation &nbsp; 
+                    //-     input( id='vacation' type='checkbox' width='20px' checked=preferences.vacation )
+                    //- li.list-group-item Time Interval to Receive Alerts &nbsp;
+                    //-     select(id='interval' width='4px')
+                    //-         option(value='1') 1 Hour Intervals
+                    //-         option(value='2') 2 Hour Intervals
+                    //-         option(value='4') 4 Hour Intervals
+                    //-         option(value='8') 8 Hour Intervals
+                    //-         option(value='12') 12 Hour Intervals
+                    //-         option(value='24') 24 Hour Intervals
                             
                 button#update_preferences_button.btn.btn-primary Update Preferences
 
@@ -53,33 +53,67 @@ block extra_scripts
         //-         });
         //-     });
         //- }());
+
+
+        //- FOR ALL PREFERENCES ADD A TITLE HERE
+        titles = ['Vacation','Time Between Receiving Alerts']
+
+        //- FOR PREFERENCES WITH A DROPDOWN ADD VALUES AND UNITS HERE
+        intervals = [[1,2,4,8,12,24]]
+        int_labels = ['Hour Intervals']
         
         var preferences = !{JSON.stringify(preferences)};
-        var ddval = preferences.mail_interval/3600
-        $(document).ready(function(){
-            $('select[id=interval] option[value=' + ddval + ']').attr('selected', 'selected');
-        });
+        //- console.log(preferences)
 
-        //- var intconf = !{JSON.stringify(config)};
-        //- const config = Object.entries(intconf)
+        var intconf = !{JSON.stringify(config)};
+        const config = Object.entries(intconf)
         //- console.log(config);
-        //- var prefdiv = document.getElementById('prefdiv')
-        //- for (i=0; i<config.length; i++) {
-        //-     var html = ""
-        //-     var newDiv = document.createElement('li')
-        //-     newDiv.id = 'head_' + config[i][0];
-        //-     newDiv.className = 'list-group-item'
-        //-     if (config[i][1][0] == 'boolean') {
-        //-         html += config[i][0] + 'checkbox'
-        //-     }
-        //-     if (config[i][1][0] == 'number') {
-        //-         html += config[i][0] + 'dropdown'
-        //-     }
-        //-     newDiv.innerHTML = html 
-        //-     prefdiv.appendChild(newDiv)
-        //-     console.log(config[i][1])
-        //- }
-        //- document.appendChild(prefdiv)
+        var prefdiv = document.getElementById('prefdiv')
+        var k = 0
+        for (i=0; i<config.length; i++) {
+            var html = ""
+            var newDiv = document.createElement('li')
+            newDiv.id = 'head_' + config[i][0];
+            newDiv.className = 'list-group-item'
+            if (config[i][1][0] == 'boolean') {
+                html += titles[i] + '&nbsp &nbsp'
+                html += "<input id='" +config[i][0] + "' type='checkbox' width='20px'>"
+                //- console.log(html)
+            }
+            if (config[i][1][0] == 'number') {
+                html += titles[i] + '&nbsp &nbsp'
+                html += "<select id='" + config[i][0] +"' width='4px'>"
+                var values = intervals[k]
+                //- console.log(values)
+                for (j=0; j<values.length; j++) {
+                    optval = values[j]
+                    html += "<option value='"+optval+"'>"+optval +" " + int_labels[k]+ " </option>"
+                }  
+                //- console.log(html)
+                k += 1                
+            }
+            newDiv.innerHTML = html 
+            prefdiv.appendChild(newDiv)
+            //- console.log(config[i][1])
+        }
+        var keys = []
+        for (i=0; i<config.length; i++) {
+            keys[i] = config[i][0]
+        }
+        //- console.log(keys)
+        var ddval = preferences.mail_interval/3600
+            $(document).ready(function(){
+                for (i=0; i<config.length; i++) {
+                    if (config[i][1][0] == 'boolean') {
+                        $('input[id="'+config[i][0]+'"]').attr('checked',preferences[keys[i]])
+                    }
+                    if (config[i][1][0] == 'number') {
+                        ddval = preferences[keys[i]]/config[i][1][1]
+                        $('select[id="'+config[i][0]+'"] option[value=' + ddval + ']').attr('selected', 'selected');
+                    }
+                }
+                
+            });
         
         
         ( function () {
@@ -89,9 +123,24 @@ block extra_scripts
                 console.log('Update preferences called');
 
                 const data = {};
-                data.vacation = $('#vacation').is(':checked');
-                var dropdown = document.getElementById('interval');
-                data.mail_interval = dropdown.value*3600;
+                var keys = []
+                for (i=0; i<config.length; i++) {
+                    keys[i] = config[i][0]
+                }
+                //- console.log(keys)
+                for (i=0; i<config.length; i++) {
+                    if (config[i][1][0] == 'boolean') {
+                        data[keys[i]] = $('#'+keys[i]).is(':checked');
+                    }
+                    if (config[i][1][0] == 'number') {
+                        dropdown = document.getElementById(''+config[i][0])
+                        data[keys[i]] = dropdown.value*config[i][1][1]
+                    }
+                }
+                //- data.vacation = $('#vacation').is(':checked');
+                //- var dropdown = document.getElementById('interval');
+                //- data.mail_interval = dropdown.value*3600;
+                //- console.log(data)
                 const toSend=JSON.stringify(data);
                 console.log('toSend',toSend);
                 let jqxhr = $.ajax({
